# Scalable-Task-Queue-API-Service

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: routes.py  schemas.py
app/core/: config.py  logging.py  security.py
app/db/: repository.py  session.py
app/models/: task.py
app/services/: task_service.py
app/workers/: __init__.py  worker.py
scripts/: seed_data.py
tests/: test_api.py  test_services.py
